--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@
     border-top: none;
 }
 .footer-bg{
-    background-color: rgb(61, 57, 57);
+    background-color: rgb(78, 76, 76);
     color: white;
     width: 100%;
     
@@ -87,11 +87,15 @@
 
 .footer-text{
     padding-top: 50px;
-    padding-left: 40px;
-    font-size: 18px;
+    padding-left: 70px;
     line-height: 30px;
     
 }
 
+.footer-text1{
+    padding-top: 50px;
+    line-height: 30px;
+    
+}
 
     
