--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .container{
-    margin-bottom:100px ;
+    margin-bottom:100px;
+    font-family:;
     
 }
 .header-body{
@@ -25,16 +26,6 @@
     padding: 5px 10px ;
     
 }
-
-.header-text-align{
-    margin:80px 0px 0px 20px;
-}
-.header-img-align{
-    margin:80px 80px 0px 0px;
-    
-    
-}
-
 
 .box{
     width: 200px;
@@ -87,11 +78,18 @@
 
 .footer-text{
     padding-top: 50px;
-    padding-left: 40px;
+    padding-left: 50px;
     font-size: 18px;
     line-height: 30px;
     
 }
 
 
+.footer-text1{
+    padding-top: 50px;
+    padding-left: 30px;
+    font-size: 18px;
+    line-height: 30px;
+    
+}
     
