--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@
     padding-left: 2rem;
 }
 
-
+.header-img{
+    padding-bottom: 30px;
+}
 .bg-nav-header{
     background-color: #f0fff0;
 }
@@ -70,7 +72,7 @@
     border-top: none;
 }
 .footer-bg{
-    background-color: rgb(61, 57, 57);
+    background-color: rgb(43, 39, 39);
     color: white;
     width: 100%;
     
@@ -81,6 +83,7 @@
     padding-left: 50px;
     font-size: 18px;
     line-height: 30px;
+    color:lightgray
     
 }
 
@@ -90,6 +93,7 @@
     padding-left: 30px;
     font-size: 18px;
     line-height: 30px;
+    color:lightgray
     
 }
     
